--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:pre": "REACT_APP_API_BASE_URL=http://posets.somenergia.lan/api react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
