--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.18.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "suneditor-react": "^2.16.3",
