--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+public/tinymce
 
 # testing
 /coverage
@@ -13,11 +14,14 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+deploy-pre.conf
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
