--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^0.21.1",
     "fs-extra": "^10.1.0",
+    "material-ui-confirm": "^2.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.18.4",
