--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ public/tinymce
 .env.development.local
 .env.test.local
 .env.production.local
-deploy-pre.conf
+deploy-*.conf
 
 npm-debug.log*
 yarn-debug.log*
